@@ -14,6 +14,7 @@
 /* ----- @header file ----- */
 #include <stdbool.h>
 #include "stc10.h"
+#include "intrasm.h"
 #include "macro.h"
 #include "util.h"
 
