@@ -67,12 +67,12 @@ void UART_config(UART_configTypeDef *uc);
 unsigned int UART_getBaudGeneratorInitValue(UART_baudrateGenerator gen,uint32_t baud);
 FunctionalState UART_isReceived(void);
 FunctionalState UART_isTransmitted(void);
+void UART_sendByte(byte dat);
+void UART_sendString(char *str);
 void UART_setBaudGenerator(UART_baudrateGenerator gen);
 void UART_setMode(UART_mode m);
 void UART_setPin(UART_pinmap pm);
 void UART_BRT_cmd(Action a);
-void UART_sendByte(byte dat);
-void UART_sendString(char *str);
 void UART_BRT_setPrescaler(RCC_BRT_prescaler pre);
 void UART_BRT_setValue(unsigned char val);
 void UART_INT_setPriority(Action a);
