@@ -27,4 +27,8 @@
           (2)add bit operation function
           (3)update Makefile to v0.1.3: *support -j option; *add rebuild function
           (4)add bus speed configuration function, please refer to mem.h
- 
+
+>Version :
+ Alias   :
+ Date    :
+ Note    :(1)fix fatal bug of example file of IAP module
